--- a/Librus/App.xaml
+++ b/Librus/App.xaml
@@ -1,8 +1,10 @@
 ﻿<Application x:Class="Librus.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Widoki/Administracja/DodawanieUzytkownika.xaml">
+             StartupUri="Widoki/PanelLogowania.xaml"
+            
+               >
     <Application.Resources>
-         
+        
     </Application.Resources>
 </Application>
