--- a/Librus/Widoki/Administracja/DodawanieUzytkownika.xaml
+++ b/Librus/Widoki/Administracja/DodawanieUzytkownika.xaml
@@ -1,8 +1,37 @@
 ﻿<Window x:Class="Librus.Widoki.Administracja.DodawanieUzytkownika"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DodawanieUzytkownika" Height="600" Width="600">
-    <!--<StackPanel VerticalAlignment="Bottom" Margin="20,20,20,50">-->
+        Title="Dodawanie użytkownika" Height="480" Width="600" Background="#1d1d1d" >
+    <!--<StackPanel >-->
+    <Window.Resources>
+        <Style x:Key="buttonStyle" >
+            <Setter Property="Control.FontFamily" Value=" Segoe Ui Light" />
+            <Setter Property="Control.FontSize" Value="18" />
+            <Setter Property="Control.Foreground" Value="White"/>
+            <Setter Property="Control.Background" Value="#1ba1e2"/>
+            <Setter Property="Control.BorderBrush" Value="#1ba1e2"/>
+
+        </Style>
+        <Style x:Key="labelStyle">
+            <Setter Property="Control.FontFamily" Value="Segoe Ui Light" />
+            <Setter Property="Control.FontSize" Value="14" />
+            <Setter Property="Control.Foreground" Value="White"/>
+
+        </Style>
+        <Style x:Key="errStyle">
+            <Setter Property="Control.FontFamily" Value="Segoe Ui Light" />
+            <Setter Property="Control.FontSize" Value="14" />
+            <Setter Property="Control.Foreground" Value="Yellow"/>
+            <Setter Property="Control.Visibility" Value="Hidden"/>
+        </Style>
+        <Style x:Key="txtStyle">
+            <Setter Property="Control.FontFamily" Value="Segoe Ui Light" />
+            <Setter Property="Control.FontSize" Value="14" />
+            <Setter Property="Control.Foreground" Value="Black"/>
+            <Setter Property="Control.VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -16,18 +45,52 @@
             <ColumnDefinition Width="50*"/>
             <ColumnDefinition Width="100*"/>
         </Grid.ColumnDefinitions>
-        <Label x:Name="lblImie" Content="Imię:" HorizontalAlignment="Right" Margin="0,0,10,0" VerticalAlignment="Center"/>
-        <Label x:Name="lblNazwisko" Content="Nazwisko:" HorizontalAlignment="Right" Margin="0,0,10,0" Grid.Row="1" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtImie" Grid.Column="1" HorizontalAlignment="Stretch" Height="23" Margin="0,0,30,0" TextWrapping="NoWrap" 
-                 VerticalAlignment="Center" Width="Auto"/>
-        <TextBox x:Name="txtNazwisko" Grid.Column="1" HorizontalAlignment="Stretch" Height="23" Margin="0,0,30,0" Grid.Row="1" TextWrapping="NoWrap" 
-                 VerticalAlignment="Center" Width="Auto"/>
-        <Label Content="e-mail" HorizontalAlignment="Right" Margin="0,0,10,0" Grid.Row="2" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtEmail" Grid.Column="1" HorizontalAlignment="Stretch" Height="23" Margin="10,0,0,0" Grid.Row="2" TextWrapping="NoWrap" Text="TextBox" VerticalAlignment="Center" 
-                 Width="Auto"/>
-        <Label x:Name="lblRola" Content="Rola" HorizontalAlignment="Right" Margin="0,0,10,0" Grid.Row="3" VerticalAlignment="Center"/>
-        <ComboBox HorizontalAlignment="Left" Margin="10,48,0,0" Grid.Row="3" VerticalAlignment="Top" Width="355" Grid.Column="1"/>
+        <Label x:Name="lblImie" Style="{StaticResource labelStyle}" Content="Imię:" HorizontalAlignment="Right" Margin="0,0,10,0" VerticalAlignment="Center"/>
+        <Label x:Name="lblNazwisko" Style="{StaticResource labelStyle}" Content="Nazwisko:" HorizontalAlignment="Right" Margin="0,0,10,0" Grid.Row="1" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtImie" Style="{StaticResource txtStyle}" Grid.Column="1" HorizontalAlignment="Stretch" Height="30" Margin="0,0,30,0" TextWrapping="NoWrap" 
+                 VerticalAlignment="Center" Width="Auto" TextChanged="TextBoxImie_TextChanged" />
+        <TextBox x:Name="txtNazwisko" Style="{StaticResource txtStyle}" Grid.Column="1" HorizontalAlignment="Stretch" Height="30" Margin="0,0,30,0" Grid.Row="1" 
+                 TextWrapping="NoWrap" VerticalAlignment="Center" Width="Auto" TextChanged="TextBoxNazwisko_TextChanged" />
+        <Label Content="E-mail:" Style="{StaticResource labelStyle}" HorizontalAlignment="Right" Margin="0,0,10,0" Grid.Row="2" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtEmail" Style="{StaticResource txtStyle}" Grid.Column="1" HorizontalAlignment="Stretch" Height="30" Margin="0,0,30,0" Grid.Row="2" TextWrapping="NoWrap"
+                  VerticalAlignment="Center"  Width="Auto" TextChanged="TextBoxEmail_TextChanged" />
+        <Label x:Name="lblRola" Content="Rola:"  Style="{StaticResource labelStyle}"  HorizontalAlignment="Right" Margin="0,0,10,0"
+               Grid.Row="3" VerticalAlignment="Center"/>
+        <ComboBox Name="comboRola" Style="{StaticResource txtStyle}" HorizontalAlignment="Stretch" Margin="0,0,30,0" VerticalAlignment="Center" Grid.Row="3" Height="30"  Width="Auto" Grid.Column="1" >
+            <ComboBoxItem IsSelected="True">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="C:/Users/aneta/Desktop/profile.jpg" />
+                    <TextBlock Margin="5,0,0,0">Nieznany</TextBlock>
+                </StackPanel>
+            </ComboBoxItem>
+
+            <ComboBoxItem >
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="C:/Users/aneta/Desktop/profile.jpg" />
+                    <TextBlock Margin="5,0,0,0">Administrator</TextBlock>
+                </StackPanel>
+            </ComboBoxItem>
+            <ComboBoxItem>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="C:/Users/aneta/Desktop/profile.jpg" />
+                    <TextBlock Margin="5,0,0,0">Nauczyciel</TextBlock>
+                </StackPanel>
+            </ComboBoxItem>
+            <ComboBoxItem>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="C:/Users/aneta/Desktop/profile.jpg" />
+                    <TextBlock Margin="5,0,0,0">Rodzic</TextBlock>
+                </StackPanel>
+            </ComboBoxItem>
+        </ComboBox>
+        <Button x:Name="btnDodaj" Content="DODAJ" Height="40" Style="{StaticResource buttonStyle }"  
+                VerticalAlignment="Bottom"  Padding="0" Margin="223,0,30,26" Grid.Row="4" Grid.Column="1" Click="Dodaj_Click"/>
+        <Button x:Name="btnAnuluj" Content="ANULUJ" Height="40" Style="{StaticResource buttonStyle }"  
+                VerticalAlignment="Bottom"  Padding="0" Margin="10,0,238,26" Grid.Row="4" Grid.Column="1" Click="Anuluj_Click"/>
+        <Label x:Name="errNazwisko"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30"  HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="1" VerticalAlignment="Bottom" Width="365"/>
+        <Label x:Name="errEmail"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30" HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="2" VerticalAlignment="Bottom" Width="365"/>
+        <Label x:Name="errImie"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30" HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="0" VerticalAlignment="Bottom" Width="365"/>
+        <Label x:Name="errRola"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30" HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="3" VerticalAlignment="Bottom" Width="365"/>
     </Grid>
-    <!--<Button Content="Dodaj"  VerticalAlignment="Bottom" Padding="0" Margin="20"/>
-    </StackPanel>-->
+
 </Window>
