--- a/Librus/App.xaml
+++ b/Librus/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Librus.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Widoki/PanelLogowania.xaml"
+             StartupUri="Widoki/Administracja/Uzytkownicy.xaml"
             
                >
     <Application.Resources>
