--- a/Librus/Widoki/Administracja/Uzytkownicy.xaml
+++ b/Librus/Widoki/Administracja/Uzytkownicy.xaml
@@ -1,8 +1,13 @@
 ﻿<Window x:Class="Librus.Widoki.Administracja.Uzytkownicy"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Uzytkownicy" Height="800" Width="1000">
+        Title="Uzytkownicy" Height="500" Width="700">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="95*"/>
+            <RowDefinition Height="374*"/>
+        </Grid.RowDefinitions>
+        <DataGrid x:Name="grid" Grid.Row="1"/>
 
     </Grid>
 </Window>
