--- a/Librus/Widoki/PanelLogowania.xaml
+++ b/Librus/Widoki/PanelLogowania.xaml
@@ -39,7 +39,7 @@
             <RowDefinition/>
             <RowDefinition Height="109"/>
         </Grid.RowDefinitions>
-        <Label x:Name="lblLogin" Style="{StaticResource labelStyle}" Content="Login:" HorizontalAlignment="Right" Margin="0,30,10,30" VerticalAlignment="Center" Height="30" Width="46"/>
+        <Label x:Name="lblLogin" Style="{StaticResource labelStyle}" Content="E-mail:" HorizontalAlignment="Right" Margin="0,30,10,30" VerticalAlignment="Center" Height="30" Width="46"/>
         <Label x:Name="lblHaslo" Style="{StaticResource labelStyle}" Content="Hasło:" HorizontalAlignment="Right" Margin="0,32,10,30" Grid.Row="1" VerticalAlignment="Center" Height="28" Width="46"/>
         <TextBox x:Name="txtLogin" Style="{StaticResource txtStyle}" Grid.Column="1" HorizontalAlignment="Stretch" Height="30" Margin="0,30,30,30" TextWrapping="NoWrap" 
                  VerticalAlignment="Center" Width="Auto" TextChanged="TextBoxLogin_TextChanged" />
