--- a/Librus/Widoki/Administracja/DodawanieUzytkownika.xaml
+++ b/Librus/Widoki/Administracja/DodawanieUzytkownika.xaml
@@ -60,7 +60,7 @@
             <ComboBoxItem IsSelected="True">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="C:/Users/aneta/Desktop/profile.jpg" />
-                    <TextBlock Margin="5,0,0,0">Nieznany</TextBlock>
+                    <TextBlock Margin="5,0,0,0">Wybierz...</TextBlock>
                 </StackPanel>
             </ComboBoxItem>
 
