--- a/Librus/Widoki/Administracja/Uzytkownicy.xaml
+++ b/Librus/Widoki/Administracja/Uzytkownicy.xaml
@@ -8,6 +8,7 @@
             <RowDefinition Height="374*"/>
         </Grid.RowDefinitions>
         <DataGrid x:Name="grid" Grid.Row="1"/>
+        <Button x:Name="btnDodaj" Content="DODAJ UŻYTKOWNIKA" HorizontalAlignment="Left" Margin="525,45,0,0" VerticalAlignment="Top" Width="130" Click="Dodaj_Click"/>
 
     </Grid>
 </Window>
