--- a/Librus/App.xaml
+++ b/Librus/App.xaml
@@ -5,6 +5,10 @@
             
                >
     <Application.Resources>
-        
+    <ResourceDictionary>
+        <ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary Source="Resources.xaml"/>
+        </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
     </Application.Resources>
 </Application>
