--- a/Librus/Widoki/Administracja/Uzytkownicy.xaml
+++ b/Librus/Widoki/Administracja/Uzytkownicy.xaml
@@ -1,14 +1,17 @@
 ﻿<Window x:Class="Librus.Widoki.Administracja.Uzytkownicy"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Uzytkownicy" Height="500" Width="700">
+        Title="Uzytkownicy" Background="#262626"  Height="500" Width="700">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="95*"/>
             <RowDefinition Height="374*"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="grid" Grid.Row="1"/>
-        <Button x:Name="btnDodaj" Content="DODAJ UŻYTKOWNIKA" HorizontalAlignment="Left" Margin="525,45,0,0" VerticalAlignment="Top" Width="130" Click="Dodaj_Click"/>
+        <DataGrid x:Name="grid" Margin="20,0,20,10"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
+                  AlternatingRowBackground="DimGray" RowHeight="20" HorizontalAlignment="Left"
+                  BorderBrush="#1d1d1d" Background="#1d1d1d"   Grid.Row="1"/>
+        <Button x:Name="btnDodaj" Style="{StaticResource buttonStyle}" Content="DODAJ UŻYTKOWNIKA" HorizontalAlignment="Right" Margin="0,28,20,29" VerticalAlignment="Center" Width="192" Click="Dodaj_Click" Height="38"/>
+        <TextBox x:Name="txtSzukaj" Style="{DynamicResource txtStyle}" Background="DimGray"  Foreground="Silver" BorderBrush="Black" HorizontalAlignment="Left" Height="26" Margin="20,36,0,33" TextWrapping="Wrap" Text="Szukaj" VerticalAlignment="Center" Width="405" MouseEnter="Szukaj_MouseEnter" />
 
     </Grid>
 </Window>
