--- a/Librus/Widoki/Administracja/Uzytkownicy.xaml
+++ b/Librus/Widoki/Administracja/Uzytkownicy.xaml
@@ -7,11 +7,36 @@
             <RowDefinition Height="95*"/>
             <RowDefinition Height="374*"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="grid" Margin="20,0,20,10"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
-                  AlternatingRowBackground="DimGray" RowHeight="20" HorizontalAlignment="Left"
-                  BorderBrush="#1d1d1d" Background="#1d1d1d"   Grid.Row="1"/>
-        <Button x:Name="btnDodaj" Style="{StaticResource buttonStyle}" Content="DODAJ UŻYTKOWNIKA" HorizontalAlignment="Right" Margin="0,28,20,29" VerticalAlignment="Center" Width="192" Click="Dodaj_Click" Height="38"/>
-        <TextBox x:Name="txtSzukaj" Style="{DynamicResource txtStyle}" Background="DimGray"  Foreground="Silver" BorderBrush="Black" HorizontalAlignment="Left" Height="26" Margin="20,36,0,33" TextWrapping="Wrap" Text="Szukaj" VerticalAlignment="Center" Width="405" MouseEnter="Szukaj_MouseEnter" />
+        <DataGrid x:Name="grid"  Style="{DynamicResource DataGridStyle}" Margin="20,0,20,10"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
+                  AlternatingRowBackground="DimGray" RowHeight="20" HorizontalAlignment="Stretch"
+                  BorderBrush="#1d1d1d" Background="#1d1d1d"   Grid.Row="1">
+         
+        </DataGrid>
+        <Button x:Name="btnDodaj" Style="{StaticResource buttonStyle}" Content="DODAJ UŻYTKOWNIKA" HorizontalAlignment="Right" Margin="0,20,20,37" VerticalAlignment="Center" Width="192" Click="Dodaj_Click" Height="38"/>
+        <TextBox x:Name="txtSzukaj" Style="{StaticResource txtStyle}" Background="DimGray"  Foreground="Silver" BorderBrush="Black" HorizontalAlignment="Left"
+                 Height="26" Margin="20,20,0,49" TextWrapping="Wrap" Text="Szukaj..." VerticalAlignment="Center" Width="405" MouseEnter="Szukaj_MouseEnter" TextChanged="Szukaj_TextChanged"  />
+        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Foreground="Black"  Margin="20,59,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged">
+            <ComboBoxItem IsSelected="True">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock >Szukaj po roli...</TextBlock>
+                </StackPanel>
+            </ComboBoxItem>
+            <ComboBoxItem >
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Margin="5,0,0,0">Administrator</TextBlock>
+                </StackPanel>
+            </ComboBoxItem>
+            <ComboBoxItem>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Margin="5,0,0,0">Nauczyciel</TextBlock>
+                </StackPanel>
+            </ComboBoxItem>
+            <ComboBoxItem>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Margin="5,0,0,0">Rodzic</TextBlock>
+                </StackPanel>
+            </ComboBoxItem>
+        </ComboBox>
 
     </Grid>
 </Window>
