--- a/Librus/Widoki/Administracja/Uzytkownicy.xaml
+++ b/Librus/Widoki/Administracja/Uzytkownicy.xaml
@@ -1,39 +1,51 @@
-﻿<Window x:Class="Librus.Widoki.Administracja.Uzytkownicy"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:Librus.Widoki.Administracja" x:Class="Librus.Widoki.Administracja.Uzytkownicy"
         Title="Uzytkownicy" Background="#262626"  Height="500" Width="700">
+
+    <Window.Resources>
+        <local:UzytkownicyViewModel x:Key="users"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="95*"/>
             <RowDefinition Height="374*"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="grid"  Style="{DynamicResource DataGridStyle}" Margin="20,0,20,10"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
-                  AlternatingRowBackground="DimGray" RowHeight="20" HorizontalAlignment="Stretch"
-                  BorderBrush="#1d1d1d" Background="#1d1d1d"   Grid.Row="1">
-         
+       
+        <DataGrid x:Name="grid" AutoGenerateColumns="False"   Style="{DynamicResource DataGridStyle}" Margin="20,0,20,10"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
+			AlternatingRowBackground="DimGray" RowHeight="20" HorizontalAlignment="Stretch"
+			BorderBrush="#1d1d1d" ItemsSource="{Binding Source={StaticResource users}, Path=uzytkownicy}" Background="#1d1d1d"   Grid.Row="1">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Imie i nazwisko" Binding="{Binding PelnaNazwa}" />
+                <DataGridTextColumn Header="Imie" Binding="{Binding Imie}" />
+                <DataGridTextColumn Header="Nazwisko" Binding="{Binding Nazwisko}" />
+                <DataGridTextColumn Header="E-mail" Binding="{Binding Email}" />
+                <DataGridTextColumn Header="Rola" Binding="{Binding Rola}" />
+            </DataGrid.Columns> 
         </DataGrid>
         <Button x:Name="btnDodaj" Style="{StaticResource buttonStyle}" Content="DODAJ UŻYTKOWNIKA" HorizontalAlignment="Right" Margin="0,20,20,37" VerticalAlignment="Center" Width="192" Click="Dodaj_Click" Height="38"/>
         <TextBox x:Name="txtSzukaj" Style="{StaticResource txtStyle}" Background="DimGray"  Foreground="Silver" BorderBrush="Black" HorizontalAlignment="Left"
-                 Height="26" Margin="20,20,0,49" TextWrapping="Wrap" Text="Szukaj..." VerticalAlignment="Center" Width="405" MouseEnter="Szukaj_MouseEnter" TextChanged="Szukaj_TextChanged"  />
-        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Foreground="Black"  Margin="20,59,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged">
+			Height="26" Margin="20,20,0,49" TextWrapping="Wrap" Text="Szukaj..." VerticalAlignment="Center" Width="405" MouseEnter="Szukaj_MouseEnter" TextChanged="Szukaj_TextChanged"  />
+        <ComboBox x:Name="comboBox"  HorizontalAlignment="Left" Foreground="Black"  Margin="20,59,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged">
             <ComboBoxItem IsSelected="True">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock >Szukaj po roli...</TextBlock>
+                    <TextBlock ><Run Text="Szukaj po roli..."/></TextBlock>
                 </StackPanel>
             </ComboBoxItem>
             <ComboBoxItem >
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="5,0,0,0">Administrator</TextBlock>
+                    <TextBlock Margin="5,0,0,0"><Run Text="Administrator"/></TextBlock>
                 </StackPanel>
             </ComboBoxItem>
             <ComboBoxItem>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="5,0,0,0">Nauczyciel</TextBlock>
+                    <TextBlock Margin="5,0,0,0"><Run Text="Nauczyciel"/></TextBlock>
                 </StackPanel>
             </ComboBoxItem>
             <ComboBoxItem>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="5,0,0,0">Rodzic</TextBlock>
+                    <TextBlock Margin="5,0,0,0"><Run Text="Rodzic"/></TextBlock>
                 </StackPanel>
             </ComboBoxItem>
         </ComboBox>
