--- a/Librus/Widoki/Administracja/Uzytkownicy.xaml
+++ b/Librus/Widoki/Administracja/Uzytkownicy.xaml
@@ -4,18 +4,16 @@
         xmlns:local="clr-namespace:Librus.Widoki.Administracja" x:Class="Librus.Widoki.Administracja.Uzytkownicy"
         Title="Uzytkownicy" Background="#262626"  Height="500" Width="700">
 
-    <Window.Resources>
-        <local:UzytkownicyViewModel x:Key="users"/>
-    </Window.Resources>
+  
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="95*"/>
             <RowDefinition Height="374*"/>
         </Grid.RowDefinitions>
        
-        <DataGrid x:Name="grid" AutoGenerateColumns="False"   Style="{DynamicResource DataGridStyle}" Margin="20,0,20,10"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
+        <DataGrid x:Name="grid"  AutoGenerateColumns="False"   Style="{DynamicResource DataGridStyle}" Margin="20,0,20,10"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
 			AlternatingRowBackground="DimGray" RowHeight="20" HorizontalAlignment="Stretch"
-			BorderBrush="#1d1d1d" ItemsSource="{Binding Source={StaticResource users}, Path=uzytkownicy}" Background="#1d1d1d"   Grid.Row="1">
+			BorderBrush="#1d1d1d" Background="#1d1d1d" Grid.Row="1">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Imie i nazwisko" Binding="{Binding PelnaNazwa}" />
                 <DataGridTextColumn Header="Imie" Binding="{Binding Imie}" />
