--- a/Librus/Widoki/Administracja/DodawanieUzytkownika.xaml
+++ b/Librus/Widoki/Administracja/DodawanieUzytkownika.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Librus.Widoki.Administracja.DodawanieUzytkownika"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+       
         Title="Dodawanie użytkownika" Height="480" Width="600" Background="#1d1d1d" >    
     <Grid>
         <Grid.RowDefinitions>
@@ -52,9 +53,9 @@
                 </StackPanel>
             </ComboBoxItem>
         </ComboBox>
-        <Button x:Name="btnDodaj" Content="DODAJ" Height="40" Style="{StaticResource buttonStyle }"  
+        <Button x:Name="btnDodaj" IsDefault="True"  Content="DODAJ" Height="40" Style="{StaticResource buttonStyle }"  
                 VerticalAlignment="Bottom"  Padding="0" Margin="223,0,30,26" Grid.Row="4" Grid.Column="1" Click="Dodaj_Click"/>
-        <Button x:Name="btnAnuluj" Content="ANULUJ" Height="40" Style="{StaticResource buttonStyle }"  
+        <Button x:Name="btnAnuluj" IsCancel="True" Content="ANULUJ" Height="40" Style="{StaticResource buttonStyle }"  
                 VerticalAlignment="Bottom"  Padding="0" Margin="10,0,238,26" Grid.Row="4" Grid.Column="1" Click="Anuluj_Click"/>
         <Label x:Name="errNazwisko"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30"  HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="1" VerticalAlignment="Bottom" Width="365"/>
         <Label x:Name="errEmail"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30" HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="2" VerticalAlignment="Bottom" Width="365"/>
