--- a/Librus/Widoki/Administracja/Uzytkownicy.xaml
+++ b/Librus/Widoki/Administracja/Uzytkownicy.xaml
@@ -24,7 +24,7 @@
         </DataGrid>
         <Button x:Name="btnDodaj" Style="{StaticResource buttonStyle}" Content="DODAJ UŻYTKOWNIKA" HorizontalAlignment="Right" Margin="0,20,20,37" VerticalAlignment="Center" Width="192" Click="Dodaj_Click" Height="38"/>
         <TextBox x:Name="txtSzukaj" Style="{StaticResource txtStyle}" Background="DimGray"  Foreground="Silver" BorderBrush="Black" HorizontalAlignment="Left"
-			Height="26" Margin="20,20,0,49" TextWrapping="Wrap" Text="Szukaj..." VerticalAlignment="Center" Width="405" MouseEnter="Szukaj_MouseEnter" TextChanged="Szukaj_TextChanged"  />
+			Height="26" Margin="20,20,0,49" TextWrapping="Wrap" Text="Szukaj..." VerticalAlignment="Center" Width="405"  TextChanged="Szukaj_TextChanged" LostFocus="txtSzukaj_LostFocus"  />
         <ComboBox x:Name="comboBox"  HorizontalAlignment="Left" Foreground="Black"  Margin="20,59,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged">
             <ComboBoxItem IsSelected="True">
                 <StackPanel Orientation="Horizontal">
