--- a/Librus/Widoki/SprawdzanieObecnosci.xaml
+++ b/Librus/Widoki/SprawdzanieObecnosci.xaml
@@ -9,10 +9,10 @@
         </Grid.RowDefinitions>
         <ComboBox Name="klasaComboBox" HorizontalAlignment="Left" Foreground="Black" Margin="10,23,0,0" VerticalAlignment="Top" Width="175" Height="32" SelectionChanged="KlasaComboBoxSelectionChanged" >
         </ComboBox>
-        <DatePicker Name="wyborDaty" HorizontalAlignment="Left" DisplayDate="" Margin="220,23,0,0" VerticalAlignment="Top" Height="32" Width="145" RenderTransformOrigin="0.515,1"/>
-        <DataGrid Name="nieobecnosciDataGrid" CanUserAddRows="False"  AutoGenerateColumns="False"   Style="{DynamicResource DataGridStyle}" Margin="20,0"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
+        <DatePicker Name="wyborDaty" HorizontalAlignment="Left" DisplayDate="" Margin="220,23,0,0" VerticalAlignment="Top" Height="32" Width="145" RenderTransformOrigin="0.515,1" SelectedDateChanged="ZmianaDaty"/>
+        <DataGrid Name="nieobecnosciDataGrid" CanUserAddRows="False"  AutoGenerateColumns="False"   Style="{DynamicResource DataGridStyle}" Margin="10,0,20,0"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
 			AlternatingRowBackground="DimGray" RowHeight="20" HorizontalAlignment="Stretch"
-			BorderBrush="#1d1d1d" Background="#1d1d1d" Grid.Row="1" Height="21">
+			BorderBrush="#1d1d1d" Background="#1d1d1d" Grid.Row="1" Height="440" SelectionUnit="Cell" SelectionMode="Single">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Imię i nazwisko" Binding="{Binding Uczen.PelnaNazwa}" />
                 <DataGridCheckBoxColumn x:Name="godzina" Header=" 8:00 " Binding="{Binding Godzina8}" />
