--- a/Librus/Widoki/DodawanieOcen.xaml
+++ b/Librus/Widoki/DodawanieOcen.xaml
@@ -1,27 +1,29 @@
 ﻿<Window x:Class="Librus.Widoki.DodawanieOcen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DodawanieOcen"  Height="617" Width="700" Background="#1d1d1d">
+        Title="Dodawanie ocen"  Height="617" Width="700" Background="#1d1d1d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="95*"/>
-            <RowDefinition Height="425*"/>
-            <RowDefinition Height="66*"/>
+            <RowDefinition Height="16*"/>
+            <RowDefinition Height="71*"/>
+            <RowDefinition Height="11*"/>
         </Grid.RowDefinitions>
-        <ComboBox Name="klasaComboBox" HorizontalAlignment="Left" Foreground="Black" Margin="10,18,0,0" VerticalAlignment="Top" Width="175" Height="32" SelectionChanged="KlasaComboBoxSelectionChanged" />
-        <ComboBox Name="przedmiotComboBox"  HorizontalAlignment="Left" Foreground="Black" Margin="215,18,0,0" VerticalAlignment="Top" Width="175" Height="32" SelectionChanged="PrzedmiotComboBoxSelectionChanged"/>
+        <ComboBox Name="klasaComboBox" HorizontalAlignment="Left" Foreground="Black" Margin="10,38,0,0" VerticalAlignment="Top" Width="175" Height="32" SelectionChanged="KlasaComboBoxSelectionChanged" />
+        <ComboBox Name="przedmiotComboBox"  HorizontalAlignment="Left" Foreground="Black" Margin="228,38,0,0" VerticalAlignment="Top" Width="175" Height="32" SelectionChanged="PrzedmiotComboBoxSelectionChanged"/>
 
-        <DataGrid Name="ocenyDataGrid" CanUserAddRows="False" AutoGenerateColumns="False"   Style="{DynamicResource DataGridStyle}" Margin="10,10,20,0"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
+        <DataGrid Name="ocenyDataGrid" CanUserAddRows="False" AutoGenerateColumns="False"   Style="{DynamicResource DataGridStyle}" Margin="10,8,19.6,0"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
 			AlternatingRowBackground="DimGray" RowHeight="20" HorizontalAlignment="Stretch"
-			BorderBrush="#1d1d1d" Background="#1d1d1d" Grid.Row="1" Height="400">
-            <DataGrid.Columns>
+			BorderBrush="#1d1d1d"  Background="#1d1d1d" Grid.Row="1" Height="400">
+            <DataGrid.Columns >
                 <DataGridTextColumn Header="Imię i nazwisko" Binding="{Binding Uczen.PelnaNazwa}" />
-                <DataGridTextColumn Header=" Oceny" Binding="{Binding Oceny}"/>
+                <DataGridTextColumn Header=" Oceny" Width="560" Binding="{Binding Oceny}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Label Name="errKlasa" Visibility="Hidden" Style="{StaticResource errStyle}" HorizontalAlignment="Left" Height="40"  VerticalAlignment="Top" Width="175" Margin="10,55,0,0"/>
-        <Label Name="errPrzedmiot" Visibility="Hidden" Style="{StaticResource errStyle}" HorizontalAlignment="Left" Height="40"  VerticalAlignment="Top" Width="175" Margin="215,55,0,0"/>
+        <Label Name="errKlasa" Visibility="Hidden" Style="{StaticResource errStyle}" HorizontalAlignment="Left" Height="40"  VerticalAlignment="Top" Width="175" Margin="10,70,0,0" Grid.RowSpan="2"/>
+        <Label Name="errPrzedmiot" Visibility="Hidden" Style="{StaticResource errStyle}" HorizontalAlignment="Left" Height="40"  VerticalAlignment="Top" Width="175" Margin="228,70,0,0" Grid.RowSpan="2"/>
         <Button x:Name="btnZapisz" IsDefault="True"  Content="ZAPISZ" Height="46" Style="{StaticResource buttonStyle }"  
-                VerticalAlignment="Bottom"  Padding="0" Margin="465,0,77,10" Click="BtnZapiszClick" RenderTransformOrigin="0.56,-4.348" Grid.Row="2"  />
+                VerticalAlignment="Bottom"  Padding="0" Margin="465,0,76.6,10.2" Click="BtnZapiszClick" RenderTransformOrigin="0.56,-4.348" Grid.Row="2"  />
+        <Label Style="{DynamicResource labelStyle}" Content="Wybierz klasę:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="175" Height="29"/>
+        <Label Style="{DynamicResource labelStyle}"  Content="Wybierz przedmiot:" HorizontalAlignment="Left" Margin="228,9,0,0" VerticalAlignment="Top" Width="175" Height="29"/>
     </Grid>
 </Window>
