--- a/Librus/Widoki/SprawdzanieObecnosci.xaml
+++ b/Librus/Widoki/SprawdzanieObecnosci.xaml
@@ -4,15 +4,15 @@
         Title="Obecności" Height="600" Width="900" Background="#1d1d1d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100*"/>
-            <RowDefinition Height="469*"/>
+            <RowDefinition Height="11*"/>
+            <RowDefinition Height="46*"/>
         </Grid.RowDefinitions>
-        <ComboBox Name="klasaComboBox" HorizontalAlignment="Left" Foreground="Black" Margin="10,23,0,0" VerticalAlignment="Top" Width="175" Height="32" SelectionChanged="KlasaComboBoxSelectionChanged" >
+        <ComboBox Name="klasaComboBox" HorizontalAlignment="Left" Foreground="Black" Margin="10,43,0,0" VerticalAlignment="Top" Width="175" Height="32" SelectionChanged="KlasaComboBoxSelectionChanged" >
         </ComboBox>
-        <DatePicker Name="wyborDaty" HorizontalAlignment="Left" DisplayDate="" Margin="220,23,0,0" VerticalAlignment="Top" Height="32" Width="145" RenderTransformOrigin="0.515,1" SelectedDateChanged="ZmianaDaty"/>
-        <DataGrid Name="nieobecnosciDataGrid" CanUserAddRows="False"  AutoGenerateColumns="False"   Style="{DynamicResource DataGridStyle}" Margin="10,0,20,0"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
+        <DatePicker Name="wyborDaty" HorizontalAlignment="Left" DisplayDate="" Margin="220,43,0,0" VerticalAlignment="Top" Height="32" Width="145" RenderTransformOrigin="0.515,1" SelectedDateChanged="ZmianaDaty"/>
+        <DataGrid Name="nieobecnosciDataGrid" CanUserAddRows="False"  AutoGenerateColumns="False"   Style="{DynamicResource DataGridStyle}" Margin="10,110,19.6,0"   VerticalAlignment="Top" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
 			AlternatingRowBackground="DimGray" RowHeight="20" HorizontalAlignment="Stretch"
-			BorderBrush="#1d1d1d" Background="#1d1d1d" Grid.Row="1" Height="440" SelectionUnit="Cell" SelectionMode="Single">
+			BorderBrush="#1d1d1d" Background="#1d1d1d" Height="427" SelectionUnit="Cell" SelectionMode="Single" Grid.RowSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Imię i nazwisko" Binding="{Binding Uczen.PelnaNazwa}" />
                 <DataGridCheckBoxColumn x:Name="godzina" Header=" 8:00 " Binding="{Binding Godzina8}" />
@@ -28,9 +28,11 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="btnZapisz" IsDefault="True"  Content="ZAPISZ" Height="32" Style="{StaticResource buttonStyle }"  
-                VerticalAlignment="Bottom"  Padding="0" Margin="410,0,347,45" Click="ZapiszClick"/>
-        <Label Name="errKlasa" Style="{DynamicResource errStyle}" Content="Label" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" Height="30" Width="175"/>
-        <Label Name="errData" Style="{DynamicResource errStyle}" Content="Label" HorizontalAlignment="Left" Margin="220,60,0,0" VerticalAlignment="Top" Height="30" Width="145"/>
+                VerticalAlignment="Bottom"  Padding="0" Margin="400,0,356.6,35.4" Click="ZapiszClick"/>
+        <Label Name="errKlasa" Visibility="Visible" Style="{DynamicResource errStyle}"  HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Height="30" Width="175"/>
+        <Label Name="errData" Visibility="Visible" Style="{DynamicResource errStyle}"  HorizontalAlignment="Left" Margin="220,75,0,0" VerticalAlignment="Top" Height="30" Width="145"/>
+        <Label Style="{DynamicResource labelStyle}" Content="Wybierz klasę:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="175" Height="29"/>
+        <Label Style="{DynamicResource labelStyle}" Content="Wybierz datę:" HorizontalAlignment="Left" Margin="220,10,0,0" VerticalAlignment="Top" Width="145" Height="29"/>
 
 
     </Grid>
