--- a/Librus/Widoki/OknoGlowneRodzic.xaml
+++ b/Librus/Widoki/OknoGlowneRodzic.xaml
@@ -9,7 +9,7 @@
                 <RowDefinition Height="116*"/>
             </Grid.RowDefinitions>
             <Button Name="obecnosciBtn" Content="OBECNOŚCI" Style="{StaticResource buttonStyle}" HorizontalAlignment="Left" Margin="95,19.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="50" Click="ObecnosciBtnClick"/>
-            <Button Name="wylogujBtn" Content="WYLOGUJ" Style="{StaticResource buttonStyle}" BorderBrush="#5a5a5a" Background="#5a5a5a"  HorizontalAlignment="Left" Margin="95,162.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="47" Click="wylogujBtn_Click"/>
+            <Button Name="wylogujBtn" Content="WYLOGUJ" Style="{StaticResource buttonStyle}" BorderBrush="#5a5a5a" Background="#5a5a5a"  HorizontalAlignment="Left" Margin="95,162.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="47" Click="WylogujBtnClick"/>
             <Label Content="Zalogowany jako: " Style="{StaticResource labelStyle}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="114" Height="29"/>
             <Label Name="nazwaLbl" Style="{StaticResource labelStyle}" HorizontalAlignment="Left" Margin="129,10,0,8.4" Width="193"/>
             <Button Name="ocenyBtn" Content="OCENY" Style="{StaticResource buttonStyle}" BorderBrush="#a1a1a1" Background="#a1a1a1" HorizontalAlignment="Left" Margin="95,92.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="44" Click="OcenyBtnClick"/>
