--- a/Librus/Widoki/PanelLogowania.xaml
+++ b/Librus/Widoki/PanelLogowania.xaml
@@ -16,13 +16,13 @@
         <Label x:Name="lblLogin" Style="{StaticResource labelStyle}" Content="E-mail:" HorizontalAlignment="Right" Margin="0,30,10,30" VerticalAlignment="Center" Height="30" Width="46"/>
         <Label x:Name="lblHaslo" Style="{StaticResource labelStyle}" Content="Hasło:" HorizontalAlignment="Right" Margin="0,32,10,30" Grid.Row="1" VerticalAlignment="Center" Height="28" Width="46"/>
         <TextBox x:Name="txtLogin" Style="{StaticResource txtStyle}" Grid.Column="1" HorizontalAlignment="Stretch" Height="30" Margin="0,30,30,30" TextWrapping="NoWrap" 
-                 VerticalAlignment="Center" Width="Auto" TextChanged="TextBoxLogin_TextChanged" />
+                 VerticalAlignment="Center" Width="Auto" TextChanged="TextBoxLoginTextChanged" />
         <Label x:Name="errHaslo"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30"  HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="1" VerticalAlignment="Bottom"/>
         <Label x:Name="errLogin"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30" HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="0" VerticalAlignment="Bottom"/>
         <Button x:Name="btnZaloguj" Content="ZALOGUJ" Height="40" Style="{StaticResource buttonStyle }" 
-                VerticalAlignment="Bottom"  Padding="0" Grid.Row="2" Grid.Column="1" Margin="69,0,47,33" Click="Zaloguj_Click"/>
+                VerticalAlignment="Bottom"  Padding="0" Grid.Row="2" Grid.Column="1" Margin="69,0,47,33" Click="ZalogujClick"/>
         <Button x:Name="btnAnuluj" Content="ANULUJ" Height="40" Style="{StaticResource buttonStyle }"  
-                VerticalAlignment="Bottom"  Padding="0"  Grid.Row="2" Grid.Column="0" Margin="61,0,0,33" Click="Anuluj_Click"/>
+                VerticalAlignment="Bottom"  Padding="0"  Grid.Row="2" Grid.Column="0" Margin="61,0,0,33" Click="AnulujClick"/>
         <PasswordBox x:Name="txtHaslo" Style="{StaticResource txtStyle}" Grid.Column="1" HorizontalAlignment="Stretch" Height="30" Margin="0,30,30,30" Grid.Row="1" 
                   VerticalAlignment="Center" Width="Auto"  />
     </Grid>
